# airdropper

./: Cargo.toml  README.md
scripts/: snapshot.sh
src/: consts.rs  data.rs  errors.rs  main.rs  utils.rs
src/data/: mod.rs  snapshot.rs  wallet_list.rs
src/subcmd/: check.rs  confirm.rs  display.rs  mod.rs  send.rs  snapshot.rs  wallet_list.rs
