[package]
name = "airdropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanctum-solana-cli-utils = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", rev="336124", features = ["clap"] }

solana-sdk = "^1"
solana-client = "^1"
solana-account-decoder = "^1"
solana-rpc-client-api = "^1"
spl-associated-token-account = "3.0.2"
spl-token-2022 = "3.0.2"
solana-program = "1.18.12"

clap = { version = "^4", features = ["derive"] }
derive_more = "0.99.17"

bytemuck = "^1"
serde = { version = "1.0.201", features = ["derive"] }
csv = "1.3.0"

log = "^0.4"
flexi_logger = "0.28.0"
